routrs and tremplates

--- a/app/templates/components/people-list.hbs
+++ b/app/templates/components/people-list.hbs
@@ -2,9 +2,6 @@
 
 <ul>
   {{#each scientist as |person|}}
-    {{!--<li>{{person}}</li>--}}
-    <li>
-        <button {{action "showPerson" person}}>{{person}}</button>
-    </li>
+    <li><button {{action "showPerson" person}}>{{person}}</button></li>
   {{/each}}
 </ul>
